[package]
name = "home"
version = "0.1.0"
edition = "2021"
authors = ["darkwater <dark@dark.red>"]

[dependencies]
bevy                 = { version = "0.15.2", features = ["dynamic_linking"] }
bevy_atmosphere      = "0.12.2"
bevy_egui            = "0.33.0"
bevy-inspector-egui  = "0.29.1"
bevy_panorbit_camera = "0.22.2"

dotenvy           = "0.15.7"
futures           = "0.3.31"
itertools         = "0.14.0"
log               = "0.4.25"
rustls            = { version = "0.23.23", features = ["aws-lc-rs"] }
serde             = { version = "1.0.217", features = ["derive"] }
serde_json        = "1.0.138"
serde_with        = "3.12.0"
tokio             = { version = "1.43.0", features = ["rt-multi-thread"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
url               = "2.5.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
overflow-checks = false
